Splitting up Authentication and YouTrack endpoints

--- a/src/main/resources/i18n/ytwv.properties
+++ b/src/main/resources/i18n/ytwv.properties
@@ -44,8 +44,10 @@ view.settings.youtrackurl=YouTrack-URL
 view.settings.youtrackuser=Username
 view.settings.youtrackpassword=Password
 view.settings.youtrackauthenticationmethod=Authentication method
+view.settings.youtrackversion=YouTrack Version
 view.settings.youtrackoauthserviceid=OAuth2 Service ID
 view.settings.youtrackoauthservicesecret=OAuth2 Service Secret
+view.settings.youtrackpermanenttoken=Personal Permanent Token
 view.settings.youtrackoauthhuburl=OAuth2 Hub URL
 view.settings.workhours=Work hours a day
 view.settings.showStatistics=Show statistics column
@@ -54,6 +56,7 @@ view.settings.showall=Show all worklogs
 view.settings.showDecimalsInExcel=Hours as decimal number in excel report
 view.settings.authentication.help=Not sure what to enter?
 view.settings.authentication.help_url=https\://github.com/pbauerochse/youtrack-worklog-viewer/wiki/Authentication-with-YouTrack
+view.settings.requiredfield=This field is required
 
 view.statistics.timespentinhours=Time spent in hours
 view.statistics.byproject=Time spent by project
@@ -73,6 +76,9 @@ datetime.column.format=ccc dd.MM. HH\:mm
 
 youtrack.authentication.oauth=OAuth2
 youtrack.authentication.httpapi=REST API
+youtrack.authentication.permanenttoken=Permanent Token
+youtrack.version.pre2017=Earlier than 2017.03
+youtrack.version.post2017=2017.03 or later
 
 worker.progress.login=Logging in to YouTrack as {0}
 worker.progress.creatingreport=Creating temporary time report {0}
@@ -112,6 +118,8 @@ exceptions.settings.password.decrypt=Could not decrypt YouTrack password from se
 exceptions.settings.password.encrypt=Could not encrypt YouTrack password for settings file
 exceptions.settings.oauthsecret.decrypt=Could not decrypt YouTrack OAuth service secret from settings file
 exceptions.settings.oauthsecret.encrypt=Could not encrypt YouTrack OAuth service secret for settings file
+exceptions.settings.permanenttoken.decrypt=Could not decrypt YouTrack personal permanent token from settings file
+exceptions.settings.permanenttoken.encrypt=Could not encrypt YouTrack personal permanent token from settings file
 exceptions.report.csvparser.io=Could not parse report data from YouTrack
 exceptions.main.instance=Call to getInstance not allowed yet
 exceptions.excel.nodata=No data to export as excel
@@ -121,3 +129,4 @@ exceptions.timerange.datesrequired=Start and end date are required
 exceptions.timerange.startafterend=Start date must not be after enddate
 exceptions.oauth.couldnotobtainaccesstoken=Could not obtain access token
 exceptions.settings.authentication.invalid=Invalid authentication provider stored in settings: {0}
+exceptions.settings.version.invalid=Invalid YouTrack version stored in settings: {0}
