--- a/src/main/resources/i18n/ytwv_de.properties
+++ b/src/main/resources/i18n/ytwv_de.properties
@@ -114,4 +114,13 @@ view.main.resolved=Gel\u00F6st
 datetime.column.format=ccc dd.MM. HH\:mm
 worker.updatecheck.checking=Suche nach neuer Version
 worker.updatecheck.available=Eine neue Version ist verf\u00FCgbar ({0})
-exceptions.settings.authentication.invalid=Ungültiger AuthenticationProvider in den Settings definiert: {0}
+exceptions.settings.authentication.invalid=Ung\u00FCltiger AuthenticationProvider in den Settings definiert: {0}
+view.settings.youtrackpermanenttoken=Pers\u00F6nlicher Permanent Token
+exceptions.settings.permanenttoken.decrypt=Konnte YouTrack Pers\u00F6nlichen Permanent Token nicht entschl\u00FCsseln
+exceptions.settings.permanenttoken.encrypt=Konnte YouTrack Pers\u00F6nlichen Permanent Token nicht verschl\u00FCsseln
+youtrack.authentication.permanenttoken=Permanent Token
+view.settings.youtrackversion=YouTrack Version
+youtrack.version.pre2017=\u00C4lter als 2017.03
+youtrack.version.post2017=2017.03 oder neuer
+exceptions.settings.version.invalid=Ung\u00FCltige YouTrack Version in den Settings definiert: {0}
+view.settings.requiredfield=Dieses Feld ist erforderlich
