--- a/src/main/resources/i18n/ytwv_en_US.properties
+++ b/src/main/resources/i18n/ytwv_en_US.properties
@@ -115,3 +115,12 @@ datetime.column.format=ccc MM/dd HH\:mm
 worker.updatecheck.checking=Checking for new version
 worker.updatecheck.available=A new version is available ({0})
 exceptions.settings.authentication.invalid=Invalid authentication provider stored in settings: {0}
+view.settings.youtrackpermanenttoken=Personal Permanent Token
+exceptions.settings.permanenttoken.encrypt=Could not encrypt YouTrack personal permanent token from settings file
+exceptions.settings.permanenttoken.decrypt=Could not decrypt YouTrack personal permanent token from settings file
+youtrack.authentication.permanenttoken=Permanent Token
+view.settings.youtrackversion=YouTrack Version
+youtrack.version.pre2017=Earlier than 2017.03
+youtrack.version.post2017=2017.03 or later
+exceptions.settings.version.invalid=Invalid YouTrack version stored in settings: {0}
+view.settings.requiredfield=This field is required
