--- a/src/main/resources/i18n/ytwv.properties
+++ b/src/main/resources/i18n/ytwv.properties
@@ -1,4 +1,4 @@
-release.version=2.2.3
+release.version=2.3.0
 release.license=Licensed under MIT License
 release.icons=Icons by FAMFAMFAM
 release.description=YouTrack is a commercial issue tracking tool developed by JetBrains.\n\n\
@@ -16,7 +16,6 @@ worker.updatecheck.available=A new version is available ({0})
 view.main.startdate.prompt=Start date
 view.main.enddate.prompt=End date
 view.main.groupby.prompt=Group by
-view.main.warning.settingsblank=Please enter your YouTrack data in the settings screen
 view.main.resolved=Resolved
 view.main.summary=Summary
 view.main.issue=Issue
@@ -56,8 +55,6 @@ view.settings.showall=Show all worklogs
 view.settings.showDecimalsInExcel=Hours as decimal number in excel report
 view.settings.authentication.help=Not sure what to enter?
 view.settings.authentication.help_url=https\://github.com/pbauerochse/youtrack-worklog-viewer/wiki/Authentication-with-YouTrack
-view.settings.requiredfield=This field is required
-
 view.statistics.timespentinhours=Time spent in hours
 view.statistics.byproject=Time spent by project
 view.statistics.byprojectandemployee=By project / employee
@@ -77,8 +74,8 @@ datetime.column.format=ccc dd.MM. HH\:mm
 youtrack.authentication.oauth=OAuth2
 youtrack.authentication.httpapi=REST API
 youtrack.authentication.permanenttoken=Permanent Token
-youtrack.version.pre2017=Earlier than 2017.03
-youtrack.version.post2017=2017.03 or later
+youtrack.version.olderOrEqual20173=2017.3 or older
+youtrack.version.newerOrEqual20174=2017.4 or newer
 
 worker.progress.login=Logging in to YouTrack as {0}
 worker.progress.creatingreport=Creating temporary time report {0}
@@ -91,16 +88,9 @@ worker.progress.categories=Fetching categories
 
 worker.excel.exporting=Creating Excel spreadsheet
 
-view.main.tabs.postprocessing=Postprocessing data
-
 exceptions.view.io=Could not load view {0}
-exceptions.main.oauth2.huburl=Hub URL not set. Please check your settings
 exceptions.main.workhours.zero=Work hours are zero. Can not format time
 exceptions.main.worker.unknown=Unknown error, please see logs
-exceptions.main.worker.youtrackurl=YouTrack URL must not be empty
-exceptions.main.worker.youtrackuser=YouTrack username must not be empty
-exceptions.main.worker.youtrackpassword=YouTrack password must not be empty
-exceptions.main.worker.reportingrange=Reporting timerange must not be empty
 exceptions.main.worker.recalculation=Recalculation of report took too long. Aborting after {0} retries
 exceptions.main.worker.statuscode=Unexpected YouTrack response status code (Message: {0}, StatusCode: {1})
 exceptions.main.worker.login=Could not login to YouTrack (Message: {0}, StatusCode: {1})
@@ -127,6 +117,5 @@ exceptions.excel.success=Successfully saved to {0}
 exceptions.internal=Internal error. Please file a bug report at the github page.
 exceptions.timerange.datesrequired=Start and end date are required
 exceptions.timerange.startafterend=Start date must not be after enddate
-exceptions.oauth.couldnotobtainaccesstoken=Could not obtain access token
 exceptions.settings.authentication.invalid=Invalid authentication provider stored in settings: {0}
 exceptions.settings.version.invalid=Invalid YouTrack version stored in settings: {0}
