--- a/src/main/resources/i18n/ytwv_de.properties
+++ b/src/main/resources/i18n/ytwv_de.properties
@@ -1,4 +1,4 @@
-release.version=2.2.3
+release.version=2.3.0
 release.license=Lizensiert unter der MIT Lizenz
 release.icons=Icons von FAMFAMFAM
 release.description=YouTrack ist ein kommerzieller Bugtracker, entwickelt von JetBrains.\n\n\
@@ -9,7 +9,6 @@ view.menu.file.exit=Beenden
 view.menu.help=Hilfe
 view.menu.help.logs=Log Meldungen
 view.menu.help.about=\u00DCber
-view.main.warning.settingsblank=Bitte fehlende Zugangsdaten in den Einstellungen pr\u00FCfen
 view.main.summary=Zusammenfassung
 view.main.issue=Task
 view.main.timerange=Report-Zeitraum
@@ -49,14 +48,9 @@ worker.progress.deletingreport=L\u00F6sche tempor\u00E4ren Report
 worker.progress.done=Fertig
 
 worker.excel.exporting=Erstelle Excel Spreadsheet
-view.main.tabs.postprocessing=Verarbeite Daten
 exceptions.view.io=Konnte View {0} nicht laden
 exceptions.main.workhours.zero=Arbeitsstunden sind 0. Kann Zeiten nicht formatieren
 exceptions.main.worker.unknown=Unbekannter Fehler, bitte Log-Meldungen pr\u00FCfen
-exceptions.main.worker.youtrackurl=YouTrack URL darf nicht leer sein
-exceptions.main.worker.youtrackuser=YouTrack Benutzername darf nicht leer sein
-exceptions.main.worker.youtrackpassword=YouTrack Passwort darf nicht leer sein
-exceptions.main.worker.reportingrange=Report-Zeitraum darf nicht leer sein
 exceptions.main.worker.recalculation=Neuberechnung des Reports dauerte zu lange. Breche ab nach {0} Versuchen
 exceptions.main.worker.statuscode=Unerwarteter Response Code von YouTrack (Nachricht\: {0}, StatusCode\: {1})
 exceptions.main.worker.login=Konnte nicht bei YouTrack anmelden (Nachricht\: {0}, StatusCode\: {1})
@@ -78,7 +72,6 @@ exceptions.internal=Interner Fehler. Bitte legen Sie ein Ticket auf der github S
 exceptions.timerange.datesrequired=Start- und Enddatum sind erforderlich
 exceptions.timerange.startafterend=Enddatum darf nicht vor Startdatum liegen
 exceptions.main.worker.groupbycategories=Konnte Gruppierungskriterien nicht von YouTrack empfangen (Message\: {0}, StatusCode\: {1})
-exceptions.oauth.couldnotobtainaccesstoken=Konnte Access Token nicht bekommen
 view.main.groupby.nogroupby=- Keine Gruppierung -
 view.main.startdate.prompt=Startdatum
 view.main.enddate.prompt=Enddatum
@@ -97,7 +90,6 @@ view.settings.general=Allgemein
 view.settings.authentication=Anmeldung
 view.settings.authentication.help=Was muss ich hier eintragen?
 view.settings.authentication.help_url=https\://github.com/pbauerochse/youtrack-worklog-viewer/wiki/Authentication-with-YouTrack
-exceptions.main.oauth2.huburl=Hub URL nicht gesetzt. Bitte Einstellungen \u00FCberpr\u00FCfen
 worker.progress.categories=Hole Kategorien
 view.settings.workdays=Arbeitstage
 view.settings.workdays.collapse=Zusammenklappen
@@ -120,7 +112,7 @@ exceptions.settings.permanenttoken.decrypt=Konnte YouTrack Pers\u00F6nlichen Per
 exceptions.settings.permanenttoken.encrypt=Konnte YouTrack Pers\u00F6nlichen Permanent Token nicht verschl\u00FCsseln
 youtrack.authentication.permanenttoken=Permanent Token
 view.settings.youtrackversion=YouTrack Version
-youtrack.version.pre2017=\u00C4lter als 2017.03
-youtrack.version.post2017=2017.03 oder neuer
+youtrack.version.olderOrEqual20173=2017.3 oder älter
+youtrack.version.newerOrEqual20174=2017.4 oder neuer
 exceptions.settings.version.invalid=Ung\u00FCltige YouTrack Version in den Settings definiert: {0}
-view.settings.requiredfield=Dieses Feld ist erforderlich
+
