--- a/src/main/resources/i18n/ytwv_en_US.properties
+++ b/src/main/resources/i18n/ytwv_en_US.properties
@@ -1,4 +1,4 @@
-release.version=2.2.3
+release.version=2.3.0
 release.license=Licensed under MIT License
 release.icons=Icons by FAMFAMFAM
 release.description=YouTrack is a commercial issue tracking tool developed by JetBrains.\n\n\
@@ -9,7 +9,6 @@ view.menu.file.exit=Exit
 view.menu.help=Help
 view.menu.help.logs=Log Messages
 view.menu.help.about=About
-view.main.warning.settingsblank=Please enter your YouTrack data in the settings screen
 view.main.summary=Summary
 view.main.issue=Issue
 view.main.timerange=Report-Timerange
@@ -49,14 +48,9 @@ worker.progress.deletingreport=Deleting temporary report
 worker.progress.done=Done
 
 worker.excel.exporting=Creating Excel spreadsheet
-view.main.tabs.postprocessing=Postprocessing data
 exceptions.view.io=Could not load view {0}
 exceptions.main.workhours.zero=Work hours are zero. Can not format time
 exceptions.main.worker.unknown=Unknown error, please see logs
-exceptions.main.worker.youtrackurl=YouTrack URL must not be empty
-exceptions.main.worker.youtrackuser=YouTrack username must not be empty
-exceptions.main.worker.youtrackpassword=YouTrack password must not be empty
-exceptions.main.worker.reportingrange=Reporting timerange must not be empty
 exceptions.main.worker.recalculation=Recalculation of report took too long. Aborting after {0} retries
 exceptions.main.worker.statuscode=Unexpected YouTrack response status code (Message: {0}, StatusCode: {1})
 exceptions.main.worker.login=Could not login to YouTrack (Message: {0}, StatusCode: {1})
@@ -91,13 +85,11 @@ view.settings.youtrackoauthserviceid=OAuth2 Service ID
 view.settings.youtrackauthenticationmethod=Authentication method
 youtrack.authentication.httpapi=REST API
 youtrack.authentication.oauth=OAuth2
-exceptions.oauth.couldnotobtainaccesstoken=Could not obtain access token
 view.settings.youtrackoauthhuburl=OAuth2 Hub URL
 view.settings.general=General
 view.settings.authentication=Authentication
 view.settings.authentication.help=Not sure what to enter?
 view.settings.authentication.help_url=https\://github.com/pbauerochse/youtrack-worklog-viewer/wiki/Authentication-with-YouTrack
-exceptions.main.oauth2.huburl=Hub URL not set. Please check your settings
 worker.progress.categories=Fetching categories
 view.settings.workdays=Workdays
 view.settings.workdays.collapse=Collapse
@@ -120,7 +112,7 @@ exceptions.settings.permanenttoken.encrypt=Could not encrypt YouTrack personal p
 exceptions.settings.permanenttoken.decrypt=Could not decrypt YouTrack personal permanent token from settings file
 youtrack.authentication.permanenttoken=Permanent Token
 view.settings.youtrackversion=YouTrack Version
-youtrack.version.pre2017=Earlier than 2017.03
-youtrack.version.post2017=2017.03 or later
+youtrack.version.olderOrEqual20173=2017.3 or older
+youtrack.version.newerOrEqual20174=2017.4 or newer
 exceptions.settings.version.invalid=Invalid YouTrack version stored in settings: {0}
-view.settings.requiredfield=This field is required
+
