- fix for Umlauts - YT version and authentication method are mandatory settings - YT version 2017.3 also allows permanent tokens

--- a/src/main/resources/i18n/ytwv.properties
+++ b/src/main/resources/i18n/ytwv.properties
@@ -119,3 +119,4 @@ exceptions.timerange.datesrequired=Start and end date are required
 exceptions.timerange.startafterend=Start date must not be after enddate
 exceptions.settings.authentication.invalid=Invalid authentication provider stored in settings: {0}
 exceptions.settings.version.invalid=Invalid YouTrack version stored in settings: {0}
+view.settings.allfields=Please fill out all fields below
