--- a/src/main/resources/i18n/ytwv_de.properties
+++ b/src/main/resources/i18n/ytwv_de.properties
@@ -112,7 +112,8 @@ exceptions.settings.permanenttoken.decrypt=Konnte YouTrack Pers\u00F6nlichen Per
 exceptions.settings.permanenttoken.encrypt=Konnte YouTrack Pers\u00F6nlichen Permanent Token nicht verschl\u00FCsseln
 youtrack.authentication.permanenttoken=Permanent Token
 view.settings.youtrackversion=YouTrack Version
-youtrack.version.olderOrEqual20173=2017.3 oder älter
+youtrack.version.olderOrEqual20173=2017.3 oder \u00E4lter
 youtrack.version.newerOrEqual20174=2017.4 oder neuer
 exceptions.settings.version.invalid=Ung\u00FCltige YouTrack Version in den Settings definiert: {0}
+view.settings.allfields=Bitte f\u00FCllen Sie alle Felder aus
 
