--- a/src/main/resources/i18n/ytwv_en_US.properties
+++ b/src/main/resources/i18n/ytwv_en_US.properties
@@ -115,4 +115,5 @@ view.settings.youtrackversion=YouTrack Version
 youtrack.version.olderOrEqual20173=2017.3 or older
 youtrack.version.newerOrEqual20174=2017.4 or newer
 exceptions.settings.version.invalid=Invalid YouTrack version stored in settings: {0}
+view.settings.allfields=Please fill out all fields below
 
