- fixed Grouping criteria for 2017.4

--- a/src/main/resources/i18n/ytwv.properties
+++ b/src/main/resources/i18n/ytwv.properties
@@ -120,3 +120,6 @@ exceptions.timerange.startafterend=Start date must not be after enddate
 exceptions.settings.authentication.invalid=Invalid authentication provider stored in settings: {0}
 exceptions.settings.version.invalid=Invalid YouTrack version stored in settings: {0}
 view.settings.allfields=Please fill out all fields below
+grouping.worktype=Work type
+grouping.author=Work author
+grouping.authoranddate=Work author and date
