--- a/src/main/resources/i18n/ytwv_de.properties
+++ b/src/main/resources/i18n/ytwv_de.properties
@@ -116,4 +116,7 @@ youtrack.version.olderOrEqual20173=2017.3 oder \u00E4lter
 youtrack.version.newerOrEqual20174=2017.4 oder neuer
 exceptions.settings.version.invalid=Ung\u00FCltige YouTrack Version in den Settings definiert: {0}
 view.settings.allfields=Bitte f\u00FCllen Sie alle Felder aus
+grouping.worktype=Arbeitstyp
+grouping.author=Autor der Arbeit
+grouping.authoranddate=Autor der Arbeit und Datum
 
