--- a/src/main/resources/i18n/ytwv_en_US.properties
+++ b/src/main/resources/i18n/ytwv_en_US.properties
@@ -116,4 +116,7 @@ youtrack.version.olderOrEqual20173=2017.3 or older
 youtrack.version.newerOrEqual20174=2017.4 or newer
 exceptions.settings.version.invalid=Invalid YouTrack version stored in settings: {0}
 view.settings.allfields=Please fill out all fields below
+grouping.worktype=Work type
+grouping.author=Work author
+grouping.authoranddate=Work author and date
 
