fixing download time report call for youtrack version 2018.1+

--- a/src/main/resources/i18n/ytwv.properties
+++ b/src/main/resources/i18n/ytwv.properties
@@ -1,4 +1,4 @@
-release.version=2.3.1
+release.version=2.3.2
 release.license=Licensed under MIT License
 release.icons=Icons by FAMFAMFAM
 release.description=YouTrack is a commercial issue tracking tool developed by JetBrains.\n\n\
@@ -76,6 +76,7 @@ youtrack.authentication.httpapi=REST API
 youtrack.authentication.permanenttoken=Permanent Token
 youtrack.version.olderOrEqual20173=2017.3 or older
 youtrack.version.newerOrEqual20174=2017.4 or newer
+youtrack.version.newerOrEqual20181=2018.1 or newer
 
 worker.progress.login=Logging in to YouTrack as {0}
 worker.progress.creatingreport=Creating temporary time report {0}
