--- a/src/main/resources/i18n/ytwv_de.properties
+++ b/src/main/resources/i18n/ytwv_de.properties
@@ -1,4 +1,4 @@
-release.version=2.3.1
+release.version=2.3.2
 release.license=Lizensiert unter der MIT Lizenz
 release.icons=Icons von FAMFAMFAM
 release.description=YouTrack ist ein kommerzieller Bugtracker, entwickelt von JetBrains.\n\n\
@@ -116,7 +116,8 @@ youtrack.version.olderOrEqual20173=2017.3 oder \u00E4lter
 youtrack.version.newerOrEqual20174=2017.4 oder neuer
 exceptions.settings.version.invalid=Ung\u00FCltige YouTrack Version in den Settings definiert: {0}
 view.settings.allfields=Bitte f\u00FCllen Sie alle Felder aus
-grouping.worktype=Arbeitstyp
-grouping.author=Autor der Arbeit
-grouping.authoranddate=Autor der Arbeit und Datum
+grouping.worktype=Typ der Zeitbuchung
+grouping.author=Zeitbuchende Person
+grouping.authoranddate=Zeitbuchende Person und Datum
+youtrack.version.newerOrEqual20181=2018.1 oder neuer
 
