--- a/src/main/resources/i18n/ytwv_en_US.properties
+++ b/src/main/resources/i18n/ytwv_en_US.properties
@@ -1,4 +1,4 @@
-release.version=2.3.1
+release.version=2.3.2
 release.license=Licensed under MIT License
 release.icons=Icons by FAMFAMFAM
 release.description=YouTrack is a commercial issue tracking tool developed by JetBrains.\n\n\
@@ -119,4 +119,5 @@ view.settings.allfields=Please fill out all fields below
 grouping.worktype=Work type
 grouping.author=Work author
 grouping.authoranddate=Work author and date
+youtrack.version.newerOrEqual20181=2018.1 or newer
 
