Preparing the dark theme

--- a/src/main/resources/i18n/ytwv.properties
+++ b/src/main/resources/i18n/ytwv.properties
@@ -44,6 +44,7 @@ view.settings.youtrackuser=Username
 view.settings.youtrackversion=YouTrack Version
 view.settings.youtrackpermanenttoken=Personal Permanent Token
 view.settings.workhours=Work hours a day
+view.settings.theme=Theme
 view.settings.showStatistics=Show statistics column
 view.settings.autoload=Load last timerange on startup
 view.settings.showall=Show all worklogs
