--- a/connectors/v20182/src/main/resources/i18n/connector-20182.properties
+++ b/connectors/v20182/src/main/resources/i18n/connector-20182.properties
@@ -1,6 +1,6 @@
 fetchingissues=Fetching issues
 fetchingworklogs=Fetching worklog items for {0} issues
 grouping.workauthor=Work author
-grouping.workauthoranddate=Work author and date
 grouping.worktype=Work type
+grouping.project=Project
 done=Done
