Multiple parallel Tasks with own Progressbar

--- a/application/src/main/resources/i18n/ytwv.properties
+++ b/application/src/main/resources/i18n/ytwv.properties
@@ -111,3 +111,13 @@ view.settings.allfields=Please fill out all fields below
 grouping.worktype=Work type
 grouping.author=Work author
 grouping.authoranddate=Work author and date
+task.updatecheck=Update Check
+task.excelexport=Excel Export {0}
+task.fetchworklogs=Fetch Worklogs
+task.groupby=Fetching GroupBy Criteria
+task.state.ready=Ready
+task.state.scheduled=Scheduled
+task.state.running=Running
+task.state.succeeded=Succeeded
+task.state.cancelled=Cancelled
+task.state.failed=Failed
