--- a/application/src/main/resources/i18n/ytwv_de.properties
+++ b/application/src/main/resources/i18n/ytwv_de.properties
@@ -105,4 +105,11 @@ grouping.worktype=Typ der Zeitbuchung
 grouping.author=Zeitbuchende Person
 grouping.authoranddate=Zeitbuchende Person und Datum
 youtrack.version.newerOrEqual20181=2018.1 oder neuer
+task.fetchworklogs=Hole Zeitbuchungen
+task.groupby=Hole Gruppierungs Parameter
+task.state.scheduled=Eingeplant
+task.state.running=L\u00E4uft
+task.state.succeeded=Erfolgreich
+task.state.cancelled=Abgebrochen
+task.state.failed=Fehlgeschlagen
 
