Cleaning up Resourcebundle

--- a/application/src/main/resources/i18n/ytwv.properties
+++ b/application/src/main/resources/i18n/ytwv.properties
@@ -16,7 +16,6 @@ worker.updatecheck.available=A new version is available ({0})
 view.main.startdate.prompt=Start date
 view.main.enddate.prompt=End date
 view.main.groupby.prompt=Group by
-view.main.resolved=Resolved
 view.main.summary=Summary
 view.main.issue=Issue
 view.main.timerange=Report-Timerange
@@ -52,10 +51,8 @@ view.settings.showDecimalsInExcel=Hours as decimal number in excel report
 view.settings.authentication.help=Not sure what to enter?
 view.settings.authentication.help_url=https\://github.com/pbauerochse/youtrack-worklog-viewer/wiki/Authentication-with-YouTrack
 view.statistics.timespentinhours=Time spent in hours
-view.statistics.byproject=Time spent by project
 view.statistics.byprojectandemployee=By project / employee
 view.statistics.byemployeeandproject=By employee / project
-view.statistics.project=Project
 view.statistics.totaltimespent=Total time spent
 view.statistics.somethingtoamountoftickets={0} ({1} Tickets)
 
@@ -67,15 +64,6 @@ timerange.custom=Custom range
 date.column.format=ccc dd.MM.
 datetime.column.format=ccc dd.MM. HH\:mm
 
-youtrack.version.newerOrEqual20174=2017.4 or newer
-youtrack.version.newerOrEqual20181=2018.1 or newer
-
-worker.progress.login=Logging in to YouTrack as {0}
-worker.progress.creatingreport=Creating temporary time report {0}
-worker.progress.waitingforrecalculation=Waiting for recalculation of time report
-worker.progress.downloadingreport=Downloading time report {0}
-worker.progress.processingreport=Processing report
-worker.progress.deletingreport=Deleting temporary report
 worker.progress.done=Done
 worker.progress.categories=Fetching categories
 
@@ -84,14 +72,6 @@ worker.excel.exporting=Creating Excel spreadsheet
 exceptions.view.io=Could not load view {0}
 exceptions.main.workhours.zero=Work hours are zero. Can not format time
 exceptions.main.worker.unknown=Unknown error, please see logs
-exceptions.main.worker.recalculation=Recalculation of report took too long. Aborting after {0} retries
-exceptions.main.worker.statuscode=Unexpected YouTrack response status code (Message: {0}, StatusCode: {1})
-exceptions.main.worker.creatingreport=Could not create temporary report (Message: {0}, StatusCode: {1})
-exceptions.main.worker.blankresponse=Did not receive any data from YouTrack
-exceptions.main.worker.groupbycategories=Could not get categories for groupBy criterias from YouTrack (Message: {0}, StatusCode: {1})
-exceptions.main.worker.reportstatus=Could not get report status from YouTrack (Message: {0}, StatusCode: {1})
-exceptions.main.worker.issuedetails=Could not get issue details from YouTrack (Message\: {0}, StatusCode\: {1})
-exceptions.main.worker.deletereport=Could not delete temporary report (Message: {0}, StatusCode: {1})
 exceptions.main.worker.nullstatus=Could not process null StatusLine
 exceptions.settings.read=Could not read settings file from {0}
 exceptions.settings.create=Could not create new settings file at {0}
@@ -99,18 +79,10 @@ exceptions.settings.write=Could not write to settings file at {0}
 exceptions.settings.password.decrypt=Could not decrypt YouTrack password from settings file
 exceptions.settings.password.encrypt=Could not encrypt YouTrack password for settings file
 exceptions.settings.permanenttoken.decrypt=Could not decrypt YouTrack personal permanent token from settings file
-exceptions.report.csvparser.io=Could not parse report data from YouTrack
 exceptions.main.instance=Call to getInstance not allowed yet
-exceptions.excel.nodata=No data to export as excel
 exceptions.excel.success=Successfully saved to {0}
 exceptions.internal=Internal error. Please file a bug report at the github page.
-exceptions.timerange.datesrequired=Start and end date are required
-exceptions.timerange.startafterend=Start date must not be after enddate
-exceptions.settings.version.invalid=Invalid YouTrack version stored in settings: {0}
 view.settings.allfields=Please fill out all fields below
-grouping.worktype=Work type
-grouping.author=Work author
-grouping.authoranddate=Work author and date
 task.updatecheck=Update Check
 task.excelexport=Excel Export {0}
 task.fetchworklogs=Fetch Worklogs
@@ -121,3 +93,5 @@ task.state.running=Running
 task.state.succeeded=Succeeded
 task.state.cancelled=Cancelled
 task.state.failed=Failed
+theme.light.label=Light
+theme.dark.label=Dark
