--- a/application/src/main/resources/i18n/ytwv_de.properties
+++ b/application/src/main/resources/i18n/ytwv_de.properties
@@ -25,9 +25,7 @@ view.settings.showStatistics=Zeige Statistik Spalte
 view.settings.autoload=Letzten Report-Zeitraum beim Start laden
 view.settings.showall=Alle Worklogs zeigen
 view.statistics.timespentinhours=Aufwand in Stunden
-view.statistics.byproject=Zeit nach Projekt
 view.statistics.byprojectandemployee=Zeit pro Projekt / Mitarbeiter
-view.statistics.project=Projekt
 view.statistics.totaltimespent=Gesamtzeit
 view.statistics.somethingtoamountoftickets={0} ({1} Tickets)
 timerange.thisweek=Diese Woche
@@ -37,38 +35,21 @@ timerange.lastmonth=Letzter Monat
 timerange.custom=Freie Auswahl
 date.column.format=ccc dd.MM.
 
-worker.progress.login=Anmeldung bei YouTrack als {0}
-worker.progress.creatingreport=Erstelle tempor\u00E4ren Report {0}
-worker.progress.waitingforrecalculation=Warten auf Neuberechnung des Reports
-worker.progress.downloadingreport=Lade Report {0} herunter
-worker.progress.processingreport=Verarbeite Report
-worker.progress.deletingreport=L\u00F6sche tempor\u00E4ren Report
 worker.progress.done=Fertig
 
 worker.excel.exporting=Erstelle Excel Spreadsheet
 exceptions.view.io=Konnte View {0} nicht laden
 exceptions.main.workhours.zero=Arbeitsstunden sind 0. Kann Zeiten nicht formatieren
 exceptions.main.worker.unknown=Unbekannter Fehler, bitte Log-Meldungen pr\u00FCfen
-exceptions.main.worker.recalculation=Neuberechnung des Reports dauerte zu lange. Breche ab nach {0} Versuchen
-exceptions.main.worker.statuscode=Unerwarteter Response Code von YouTrack (Nachricht\: {0}, StatusCode\: {1})
-exceptions.main.worker.creatingreport=Konnte tempor\u00E4ren Report nicht erstellen (Nachricht\: {0}, StatusCode\: {1})
-exceptions.main.worker.blankresponse=Keine Daten von YouTrack erhalten
-exceptions.main.worker.reportstatus=Konnte Report-Status nicht erhalten (Nachricht\: {0}, StatusCode\: {1})
-exceptions.main.worker.deletereport=Konnte tempor\u00E4ren Report nicht l\u00F6schen (Nachricht\: {0}, StatusCode\: {1})
 exceptions.main.worker.nullstatus=Konnte leere StatusLine nicht auswerten
 exceptions.settings.read=Konnte Einstellungen nicht aus Datei {0} laden
 exceptions.settings.create=Konnte neue Einstellungen-Datei nicht unter {0} anlegen
 exceptions.settings.write=Konnte Einstellungs-Datei nicht unter {0} speichern
 exceptions.settings.password.decrypt=Konnte YouTrack Passwort nicht entschl\u00FCsseln
 exceptions.settings.password.encrypt=Konnte YouTrack Passwort nicht verschl\u00FCsseln
-exceptions.report.csvparser.io=Konnte Reportdaten nicht parsen
 exceptions.main.instance=Aufruf von getInstance noch nicht erlaubt
-exceptions.excel.nodata=Keine Daten f\u00FCr Excel Export
 exceptions.excel.success=Erfolgreich gespeichert nach {0}
 exceptions.internal=Interner Fehler. Bitte legen Sie ein Ticket auf der github Seite an.
-exceptions.timerange.datesrequired=Start- und Enddatum sind erforderlich
-exceptions.timerange.startafterend=Enddatum darf nicht vor Startdatum liegen
-exceptions.main.worker.groupbycategories=Konnte Gruppierungskriterien nicht von YouTrack empfangen (Message\: {0}, StatusCode\: {1})
 view.main.groupby.nogroupby=- Keine Gruppierung -
 view.main.startdate.prompt=Startdatum
 view.main.enddate.prompt=Enddatum
@@ -90,26 +71,21 @@ view.settings.workdays.thursday=Do
 view.settings.workdays.friday=Fr
 view.settings.workdays.saturday=Sa
 view.settings.workdays.sunday=So
-exceptions.main.worker.issuedetails=Konnte Task details nicht empfangen (Message\: {0}, StatusCode\: {1})
-view.main.resolved=Gel\u00F6st
 datetime.column.format=ccc dd.MM. HH\:mm
 worker.updatecheck.checking=Suche nach neuer Version
 worker.updatecheck.available=Eine neue Version ist verf\u00FCgbar ({0})
 view.settings.youtrackpermanenttoken=Pers\u00F6nlicher Permanent Token
 exceptions.settings.permanenttoken.decrypt=Konnte YouTrack Pers\u00F6nlichen Permanent Token nicht entschl\u00FCsseln
 view.settings.youtrackversion=YouTrack Version
-youtrack.version.newerOrEqual20174=2017.4 oder neuer
-exceptions.settings.version.invalid=Ung\u00FCltige YouTrack Version in den Settings definiert: {0}
 view.settings.allfields=Bitte f\u00FCllen Sie alle Felder aus
-grouping.worktype=Typ der Zeitbuchung
-grouping.author=Zeitbuchende Person
-grouping.authoranddate=Zeitbuchende Person und Datum
-youtrack.version.newerOrEqual20181=2018.1 oder neuer
 task.fetchworklogs=Hole Zeitbuchungen
 task.groupby=Hole Gruppierungs Parameter
+task.state.ready=Bereit
 task.state.scheduled=Eingeplant
 task.state.running=L\u00E4uft
 task.state.succeeded=Erfolgreich
 task.state.cancelled=Abgebrochen
 task.state.failed=Fehlgeschlagen
+theme.light.label=Hell
+theme.dark.label=Dunkel
 
