Temporary Workaround for JT-47943

--- a/application/src/main/resources/i18n/ytwv.properties
+++ b/application/src/main/resources/i18n/ytwv.properties
@@ -95,3 +95,9 @@ task.state.cancelled=Cancelled
 task.state.failed=Failed
 theme.light.label=Light
 theme.dark.label=Dark
+connector.v20182.worklogfield.label=YouTrack "work date" field name
+connector.v20182.worklogfield.hint=Depends on the language of your YouTrack instance.\
+For english: "work date".\
+\
+You need to figure this field out manually by trying it out in YouTrack yourself with a search for issues.
+connector.v20182.worklogfield.help=Click here for additional help
