Implementing a simple plugin architecture

--- a/application/src/main/resources/i18n/ytwv.properties
+++ b/application/src/main/resources/i18n/ytwv.properties
@@ -1,4 +1,4 @@
-release.version=2.5.0
+release.version=3.0.0
 release.license=Licensed under MIT License
 release.icons=Icons by FAMFAMFAM
 release.description=YouTrack is a commercial issue tracking tool developed by JetBrains.\n\n\
@@ -101,3 +101,7 @@ For english: "work date".\
 \
 You need to figure this field out manually by trying it out in YouTrack yourself with a search for issues.
 connector.v20182.worklogfield.help=Click here for additional help
+view.settings.enablePlugins=Enable Plugins
+view.menu.plugins=Plugins
+plugins.nonefound=No plugins found
+plugins.info=Plugin Info
