--- a/application/src/main/resources/i18n/ytwv_de.properties
+++ b/application/src/main/resources/i18n/ytwv_de.properties
@@ -92,4 +92,6 @@ connector.v20182.worklogfield.label=YouTrack "Arbeitsdatum" Feld Name
 connector.v20182.worklogfield.hint=H\u00E4ngt ab von der YouTrack Sprache.\n\nBei Deutsch: "Arbeitsdatum".\n\n\
 Muss durch Ausprobieren in der Ticketsuche in YouTrack ermittelt werden.
 connector.v20182.worklogfield.help=Klicke hier f\u00FCr weitere Infos
+view.settings.enablePlugins=Plugins aktivieren
+plugins.nonefound=Keine Plugins gefunden
 
