optimized log window performance

--- a/application/src/main/resources/i18n/ytwv.properties
+++ b/application/src/main/resources/i18n/ytwv.properties
@@ -105,3 +105,5 @@ view.settings.enablePlugins=Enable Plugins
 view.menu.plugins=Plugins
 plugins.nonefound=No plugins found
 plugins.info=Plugin Info
+view.logs.savefile=Save Log File
+exceptions.logs.savefile=Could not save log file to {0}
