--- a/application/src/main/resources/i18n/ytwv_de.properties
+++ b/application/src/main/resources/i18n/ytwv_de.properties
@@ -94,4 +94,6 @@ Muss durch Ausprobieren in der Ticketsuche in YouTrack ermittelt werden.
 connector.v20182.worklogfield.help=Klicke hier f\u00FCr weitere Infos
 view.settings.enablePlugins=Plugins aktivieren
 plugins.nonefound=Keine Plugins gefunden
+view.logs.savefile=Log Datei speichern
+exceptions.logs.savefile=Konnte Log Datei nicht unter {0} speichern
 
