- addressed SonarLint issues - closing http streams properly

--- a/application/src/main/resources/i18n/ytwv.properties
+++ b/application/src/main/resources/i18n/ytwv.properties
@@ -107,3 +107,5 @@ plugins.nonefound=No plugins found
 plugins.info=Plugin Info
 view.logs.savefile=Save Log File
 exceptions.logs.savefile=Could not save log file to {0}
+exceptions.updater.versions=Error retrieving available versions from Github
+exceptions.excel.error=Error writing Excel file to {0}
