--- a/application/src/main/resources/i18n/ytwv_de.properties
+++ b/application/src/main/resources/i18n/ytwv_de.properties
@@ -96,4 +96,6 @@ view.settings.enablePlugins=Plugins aktivieren
 plugins.nonefound=Keine Plugins gefunden
 view.logs.savefile=Log Datei speichern
 exceptions.logs.savefile=Konnte Log Datei nicht unter {0} speichern
+exceptions.updater.versions=Versionen konnten nicht aus Github geladen werden
+exceptions.excel.error=Fehler beim Schreiben der Excel Datei nach {0}
 
