Views for grouping

--- a/application/src/main/resources/i18n/ytwv.properties
+++ b/application/src/main/resources/i18n/ytwv.properties
@@ -22,7 +22,7 @@ view.main.timerange=Report-Timerange
 view.main.download=Download Worklogs
 view.main.tabs.own=Own Worklogs
 view.main.tabs.all=All Worklogs
-view.main.groupby.nogroupby=- No grouping -
+grouping.none=- No grouping -
 view.settings.workdays=Workdays
 view.settings.workdays.collapse=Collapse
 view.settings.workdays.highlight=Highlight
@@ -61,6 +61,8 @@ timerange.lastweek=Last week
 timerange.thismonth=This month
 timerange.lastmonth=Last month
 timerange.custom=Custom range
+timerange.custom.startrequired=Start date is required
+timerange.custom.endrequired=End date is required
 date.column.format=ccc dd.MM.
 datetime.column.format=ccc dd.MM. HH\:mm
 
@@ -109,3 +111,6 @@ view.logs.savefile=Save Log File
 exceptions.logs.savefile=Could not save log file to {0}
 exceptions.updater.versions=Error retrieving available versions from Github
 exceptions.excel.error=Error writing Excel file to {0}
+grouping.workauthor=Work author
+grouping.worktype=Work type
+grouping.project=Project
