--- a/application/src/main/resources/i18n/ytwv_de.properties
+++ b/application/src/main/resources/i18n/ytwv_de.properties
@@ -50,7 +50,7 @@ exceptions.settings.password.encrypt=Konnte YouTrack Passwort nicht verschl\u00F
 exceptions.main.instance=Aufruf von getInstance noch nicht erlaubt
 exceptions.excel.success=Erfolgreich gespeichert nach {0}
 exceptions.internal=Interner Fehler. Bitte legen Sie ein Ticket auf der github Seite an.
-view.main.groupby.nogroupby=- Keine Gruppierung -
+grouping.none=- Keine Gruppierung -
 view.main.startdate.prompt=Startdatum
 view.main.enddate.prompt=Enddatum
 view.main.groupby.prompt=Gruppierung
@@ -98,4 +98,9 @@ view.logs.savefile=Log Datei speichern
 exceptions.logs.savefile=Konnte Log Datei nicht unter {0} speichern
 exceptions.updater.versions=Versionen konnten nicht aus Github geladen werden
 exceptions.excel.error=Fehler beim Schreiben der Excel Datei nach {0}
+grouping.project=Projekt
+grouping.worktype=Typ der Zeitbuchung
+grouping.workauthor=Zeitbuchende Person
+timerange.custom.startrequired=Startdatum ist erforderlich
+timerange.custom.endrequired=Enddatum ist erforderlich
 
