--- a/application/src/main/resources/i18n/ytwv.properties
+++ b/application/src/main/resources/i18n/ytwv.properties
@@ -22,7 +22,7 @@ view.main.timerange=Report-Timerange
 view.main.download=Download Worklogs
 view.main.tabs.own=Own Worklogs
 view.main.tabs.all=All Worklogs
-grouping.none=- No grouping -
+grouping.none=- No grouping value -
 view.settings.workdays=Workdays
 view.settings.workdays.collapse=Collapse
 view.settings.workdays.highlight=Highlight
@@ -114,3 +114,4 @@ exceptions.excel.error=Error writing Excel file to {0}
 grouping.workauthor=Work author
 grouping.worktype=Work type
 grouping.project=Project
+exceptions.notsetyet={0} is not ready yet. Please verify, that the settings dialog has been filled out correctly.
