--- a/application/src/main/resources/i18n/ytwv_de.properties
+++ b/application/src/main/resources/i18n/ytwv_de.properties
@@ -50,7 +50,7 @@ exceptions.settings.password.encrypt=Konnte YouTrack Passwort nicht verschl\u00F
 exceptions.main.instance=Aufruf von getInstance noch nicht erlaubt
 exceptions.excel.success=Erfolgreich gespeichert nach {0}
 exceptions.internal=Interner Fehler. Bitte legen Sie ein Ticket auf der github Seite an.
-grouping.none=- Keine Gruppierung -
+grouping.none=- Kein Gruppierungswert -
 view.main.startdate.prompt=Startdatum
 view.main.enddate.prompt=Enddatum
 view.main.groupby.prompt=Gruppierung
@@ -103,4 +103,5 @@ grouping.worktype=Typ der Zeitbuchung
 grouping.workauthor=Zeitbuchende Person
 timerange.custom.startrequired=Startdatum ist erforderlich
 timerange.custom.endrequired=Enddatum ist erforderlich
+exceptions.notsetyet={0} ist noch nicht bereit. Bitte sicherstellen, dass der Einstellungen Dialog korrekt ausgefüllt ist.
 
