--- a/connectors/connector-2019.x/src/main/resources/i18n/connector-2019.properties
+++ b/connectors/connector-2019.x/src/main/resources/i18n/connector-2019.properties
@@ -1,3 +1,5 @@
+converting.issues=Processing issue {0}
+done=Done
 fetching.workitems=Fetching work items for time span {0}
 fetching.workitems.error=Error while fetching Work Items: {0}
 issue.nosummary=-- no issue summary --
