--- a/connectors/connector-2019.x/src/main/resources/i18n/connector-2019_de.properties
+++ b/connectors/connector-2019.x/src/main/resources/i18n/connector-2019_de.properties
@@ -1,3 +1,5 @@
+converting.issues=Verarbeite Ticket {0}
+done=Fertig
 fetching.workitems=Lade Zeitbuchungen für Zeitraum {0}
 fetching.workitems.error=Fehler beim Laden der Zeitbuchungen: {0}
 issue.nosummary=-- keine Ticket Beschreibung --
